# python

./: dev_env  docker-compose.yaml  pyproject.toml
.github/workflows/: client_oncommit.yaml  commit.yaml  core_oncommit.yaml  pull_request.yaml  release.yaml  zipline_oncommit.yaml
src/client/: .gitignore  Dockerfile  README.rst  pyproject.toml  sample_config.json  setup.cfg
src/client/.github/workflows/: main.yaml  publish_examples.yaml  release.yaml
src/client/docs/: conf.py  index.rst
src/client/docs/data/: index.rst
src/client/docs/worker/: index.rst
src/client/examples/ema/: Dockerfile  README.rst  ema.py
src/client/examples/random/: Dockerfile  random.py
src/client/foreverbull/: __init__.py  __main__.py  demo.py  environment.py  foreverbull.py  models.py  parser.py
src/client/foreverbull/data/: __init__.py  data.py  stock_data.py
src/client/foreverbull/worker/: __init__.py  worker.py
src/client/tests/: conftest.py  sample_data.json  test_cli.py  test_end_to_end.py  test_environment.py  test_foreverbull.py  test_parser.py  test_routes.py
src/client/tests/data/: conftest.py  sample_data.py  test_data.py
src/client/tests/worker/: test_worker.py
src/core/: .gitignore  Dockerfile  README.rst  for_test.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/core/.github/workflows/: main.yaml  release_pypi.yaml
src/core/docs/: conf.py  http.rst  index.rst  models.rst  socket.rst
src/core/foreverbull_core/: __init__.py  broker.py
src/core/foreverbull_core/http/: __init__.py  backtest.py  service.py  worker.py
src/core/foreverbull_core/models/: backtest.py  base.py  finance.py  service.py  socket.py  worker.py
src/core/foreverbull_core/socket/: exceptions.py  nanomsg.py  router.py
src/core/src/foreverbull_core/: broker.py  cli.py  logger.py
src/core/src/foreverbull_core/http/: exceptions.py  http.py  service.py  worker.py
src/core/src/foreverbull_core/models/: backtest.py  socket.py
src/core/src/foreverbull_core/socket/: client.py  router.py
src/core/tests/: test_broker.py  test_logger.py
src/core/tests/http/: test_backtest.py  test_service.py  test_worker_api.py
src/core/tests/input/: test_backtest_input.py  test_service_input.py  test_worker_input.py
src/core/tests/models/: test_finance.py  test_socket.py  test_worker.py
src/core/tests/socket/: test_client.py  test_nanomsg.py  test_router.py
src/zipline/: .gitignore  Dockerfile  LICENSE  README.rst  pyproject.toml  setup.cfg
src/zipline/.github/workflows/: main.yaml  release_docker.yaml  release_pypi.yaml
src/zipline/app/: __init__.py  __main__.py  app.py  backtest.py  broker.py  feed.py
src/zipline/app/data_bundles/: foreverbull.py  yahoo.py
src/zipline/docs/: conf.py  index.rst
src/zipline/docs/backtest/: index.rst
src/zipline/docs/data_bundle/: index.rst  yahoo_demo_bundle.sub
src/zipline/foreverbull_zipline/: __init__.py  __main__.py  app.py  backtest.py  broker.py  exceptions.py  feed.py  models.py
src/zipline/foreverbull_zipline/data_bundles/: foreverbull.py  yahoo.py
src/zipline/tests/: __init__.py  conftest.py  factories.py  test_app.py  test_backtest.py  test_broker.py  test_cli.py  test_end_to_end.py  test_feed.py  test_models.py
tests/: test_integration.py
