[project]
name="foreverbull"
version="0.0.0"
description="foreverbull"
authors = [{ name = "Henrik Nilsson", email = "henrik@lhjnilsson.com" }]
requires-python = ">=3.7,<4"
dependencies= [
    "pandas>=1.3.2,<2.0.0",
    "requests>=2.26.0,<3.0.0",
    "sqlalchemy>=1.4.23,<2.0.0",
    "psycopg2-binary>=2.9.1,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "yfinance>=0.1.87,<1.0.0",
    "pytest>=6.2.4,<7.0.0",
    "pytest-mock>=3.6.1,<4.0.0",
    "requests_mock>=1.9.3,<2.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-pyproject>=1.2.2,<2.0.0",
    "black>=21.7b0,<30",
    "isort>=5.9.3,<6.0.0",
    "pytest-cov"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
