[flake8]
max-line-length = 120

[tool:pytest]
testpaths =
    tests
log_cli = True
log_cli_level = DEBUG


[metadata]
name=foreverbull
version=attr: src.VERSION
description=foreverbull
author=Henrik Nilsson
author_email=henrik@lhjnilsson.com
python_requires=>=3.8
classifiers=
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages= find:
install_requires=
    pandas>=1.3.2,<2.0.0
    foreverbull-core>=0.1.1
    requests>=2.26.0,<3.0.0
    sqlalchemy>=1.4.23,<2.0.0
    psycopg2-binary>=2.9.1,<3.0.0


[options.entry_points]
console_scripts = 
    foreverbull = foreverbull.__main__:main


[options.extras_require]
dev = 
    pytest>=6.2.4,<7.0.0
    pytest-mock>=3.6.1,<4.0.0
    flake8>=3.9.2,<4.0.0
    black>=21.7b0,<30
    isort>=5.9.3,<6.0.0
    pytest-cov<4.0.0
    coverage<6.0.0
docs = 
    sphinx>=4.2.0,<5.0.0
    alablaster
