[flake8]
max-line-length = 120

[metadata]
name=foreverbull-core
description=Core Python functionality for Foreverbull
author=Henrik Nilsson
author_email=henrik@lhjnilsson.com
python_requires=>=3.8
classifiers=
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
include_package_data = True
packages= find:
package_dir=
    =foreverbull_core
install_requires=
    pydantic>=1.8.2,<2.0.0
    pynng>=0.7.1,<1.0.0

[options.packages.find]
where=src
exclude=tests

[options.extras_require]
dev = 
    pytest>=6.2.4,<7.0.0
    pytest-mock>=3.6.1,<4.0.0
    requests_mock>=1.9.3,<2.0.0
    flake8>=5.0.4,<6.0.0
    flake8-pyproject>=1.2.0,<2.0.0
    black>=21.7b0,<30
    isort>=5.9.3,<6.0.0
    pytest-cov
