[flake8]
max-line-length = 120

[metadata]
name=zipline-foreverbll
version=attr: src.VERSION
description=Zipline API to be use for Foreverbull
author=Henrik Nilsson
author_email=henrik@lhjnilsson.com
python_requires=>=3.8
classifiers=
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages= find:
install_requires=
    zipline-reloaded==2.2.0
    foreverbull-core>=0.1.1
    iso3166<2.1.0
    numpy<1.23.0
    psycopg2-binary>=2.9.3,<3.0.0
    sqlalchemy==1.4.43

[options.extras_require]
dev = 
    pytest>=6.2.4,<7.0.0
    pytest-mock>=3.6.1,<4.0.0
    flake8>=3.9.2,<4.0.0
    black>=21.7b0,<30
    isort>=5.9.3,<6.0.0
    pytest-cov
docs = 
    sphinx>=4.2.0,<5.0.0
    alablaster
